--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Chenyao2333/freedns#readme",
   "dependencies": {
     "express": "^4.15.4",
+    "geoip-lite": "^1.2.1",
     "native-dns": "^0.7.0",
     "request": "^2.81.0"
   }
